@@ -1,6 +1,10 @@
 #VERSION 0.8.4#
 
- - deleted methods _filter_word() and filter_words in favor of new method _filter_alpha() and _filter_alpha_num(), and added
+ - splited class Peak_FormValidation into Peak_Filters_Advanced and Peak_Filters_Form
+
+ - simplified Peak_Filters and moved some code into Peak_Filters_Basic
+
+ - deleted methods _filter_word() and filter_words() in favor of new method _filter_alpha() and _filter_alpha_num(), and added
    method getFiltersList() in Peak_FormValidation
 
  - added abstract class Peak_FormValidation
